fix(proxy): Authentication username/password must be null if not provided (#4273)
* fix(proxy): Authentication username/password must be null if not provided

* fix(proxy): Authentication username/password must be null for system properties as well

(cherry picked from commit e05a08aecad33c8ab3cc1fb55f6cabba142c57f4)